k8s/apps/devops-app/base/backend/policies/require-resource-limits-be-policy-binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: enforce-devops-backend-binding
spec:
  policyName: enforce-devops-backend-resource-limits
  matchResources:
    resourceRules:
      - apiGroups: ["apps"]
        apiVersions: ["v1"]
        resources: ["deployments"]
        operations: ["CREATE", "UPDATE"]
        scope: "Namespaced"
    objectSelector:
      matchLabels:
        app.kubernetes.io/name: devops-app-backend
  validationActions:
  - Deny
